--- a/src/pages/addClasses.pug
+++ b/src/pages/addClasses.pug
@@ -9,3 +9,16 @@
 .gap-20px
 .uppercase
 .self-start
+.justify-self-end
+.h-150px
+.h-200px
+.h-250px
+.h-300px
+.h-350px
+.h-400px
+.lg_h-150px
+.lg_h-200px
+.lg_h-250px
+.lg_h-300px
+.lg_h-350px
+.lg_h-400px
