--- a/src/pages/article.pug
+++ b/src/pages/article.pug
@@ -68,6 +68,14 @@ block content
               p Артрит коленных суставов относят к часто встречающимся патологиям воспалительного характера. Причины их развития бывают разнообразными. Суставные патологии при артрите всегда сопровождаются болевыми ощущениями. Из-за болезненности снижается объем движений в суставе.
           p(class='!mb-25px') Проявления заболевания существенно снижают качество жизни пациента. Артрит нередко служит причиной развития инвалидности в относительно молодом возрасте. Чтобы не возникло этих проблем, при появлении начальных признаков заболевания необходимо сразу обращаться за медицинской помощью.
           p Если вы уже давно страдаете воспалением коленных суставов, не стоит отчаиваться. Сейчас разработано множество эффективных методов терапии этой болезни, которые помогают даже при хронических запущенных формах артрита.
+          <div class="lg_grid grid-cols-2 gap-x-20px mb-20px">
+            <div class="article__img img-cover h-350px lg_h-[350px]">
+              <img class="lazyautosizes lazyloaded" data-sizes="auto" data-src="https://rikta.ru/images/stati/sin3.jpg" alt="Светолечение Maker" sizes="150px" src="https://rikta.ru/images/stati/sin3.jpg">
+            </div>
+            <div class="article__img img-cover h-350px lg_h-[350px]">
+              <img class="lazyautosizes lazyloaded" data-sizes="auto" data-src="https://rikta.ru/images/stati/sin5.jpg" alt="Лечение кожных болезней" sizes="150px" src="https://rikta.ru/images/stati/sin5.jpg">
+            </div>
+          </div>
           <h2>Сравнение стоимости лечения лазером в&nbsp;московских клиниках и&nbsp;на&nbsp;дому портативным аппаратом</h2>
           +compare-slider()
             +compare-slider-content()
