--- a/src/blocks/cart-page/cart-page.scss
+++ b/src/blocks/cart-page/cart-page.scss
@@ -621,6 +621,10 @@
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
   }
 
+  .bx-soa-cart-total-data.hide {
+    display: none;
+  }
+
   .bx-soa-cart-total-line {
     margin-bottom: 9px;
     border-bottom-style: dashed;
@@ -651,8 +655,8 @@
     order: -1;
 
     @media (min-width: $screen-xxl) {
-      margin: 0;
-      margin-right: 10px;
+      margin: 0 !important;
+      margin-right: 10px !important;
     }
   }
 
@@ -704,6 +708,10 @@
     // .bx-soa-cart-total-form-field span i {
     //   font-family: 'Montserrat';
     // }
+  }
+
+  .bx-soa-cart-total-form.hide {
+    display: none;
   }
 
   .tanais-order .btn.btn-outline-primary {
@@ -828,17 +836,17 @@
   .btn--angle-left {
     position: relative;
 
-    &::before {
-      content: '';
-      position: absolute;
-      width: 4px;
-      height: 7px;
-      left: 12px;
-      top: 50%;
-      color: #007cd3;
-      background-image: url('/img/angle-left.svg');
-      transform: translateY(-75%);
-    }
+    // &::before {
+    //   content: '';
+    //   position: absolute;
+    //   width: 4px;
+    //   height: 7px;
+    //   left: 12px;
+    //   top: 50%;
+    //   color: #007cd3;
+    //   background-image: url('/img/angle-left.svg');
+    //   transform: translateY(-75%);
+    // }
   }
 
   //  Корзина кнопки
@@ -964,5 +972,9 @@
 
   .bx-soa-cart-total-ghost {
     display: none !important;
+  }
+
+  .bx-soa-cart-total .btn-order-one-click {
+    font-size: 16px !important;
   }
 }
