--- a/src/blocks/data-table/data-table.scss
+++ b/src/blocks/data-table/data-table.scss
@@ -16,12 +16,18 @@
 
     &#{$block-name}--devices {
       @media (min-width: $screen-lg) {
+        grid-template-columns: 1fr 1fr 1fr 180px;
+      }
+      @media (min-width: $screen-xl) {
         grid-template-columns: 1fr 1fr 1fr 300px;
       }
     }
 
     &#{$block-name}--service {
       @media (min-width: $screen-lg) {
+        grid-template-columns: 1fr 1fr 1fr 120px 1fr 120px;
+      }
+      @media (min-width: $screen-xl) {
         grid-template-columns: 1fr 1fr 1fr 200px 1fr 200px;
       }
     }
