--- a/src/blocks/field-select/field-select.scss
+++ b/src/blocks/field-select/field-select.scss
@@ -28,6 +28,8 @@
     }
 
     select {
+      width: 100%;
+      display: inline-block;
       padding: 6px 15px 6px 10px;
       font-size: 18px;
       line-height: 28px;
