--- a/src/blocks/pagination/pagination.scss
+++ b/src/blocks/pagination/pagination.scss
@@ -11,6 +11,10 @@
   justify-content: center;
   padding: 15px 0;
 
+  .profile__main & {
+    padding: 0;
+  }
+
   &__inner {
     display: inline-flex;
     margin-right: auto;
@@ -18,6 +22,10 @@
     padding: 10px 20px;
     @apply shadow-default;
     border-radius: 34px;
+
+    .profile__main & {
+      padding: 5px 10px;
+    }
 
     @media (min-width: $screen-lg) {
       padding: 10px 24px;
